--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^10.4.0",
     "next": "13.5.4",
     "nextjs-google-analytics": "^2.3.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.47.0",
+    "sweetalert2": "^11.7.32"
   },
   "devDependencies": {
     "@types/node": "^20",
